k8s/istio/AuthorizationPolicy/user-authz.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-test-client-to-user-service
  namespace: zerotrust
spec:
  selector:
    matchLabels:
      app: user-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/zerotrust/sa/test-client-sa"
